--- a/app/views/psd-cases-area/notifications/record-corrective-actions-choice.html
+++ b/app/views/psd-cases-area/notifications/record-corrective-actions-choice.html
@@ -24,7 +24,7 @@
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
       <span class="govuk-caption-l">{{title}}</span>
       <h1 class="govuk-fieldset__heading govuk-!-margin-bottom-4">
-       Have you already taken a corrective action for the unsafe product(s)?
+       Have you already taken a corrective action for the unsafe or non-compliant product(s)?
       </h1>
     </legend>
 
