--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -28,3 +28,17 @@ $govuk-assets-path: "/govuk/assets/";
 // styles for PSD and MSA
 @import "opss/opss-psd";
 @import "opss/opss-msa";
+
+
+.app-task-list__tag {
+  background-color: transparent;
+  color: #0c2d4a;
+  font-weight:normal;
+  text-transform: none;
+  font-size:1.2rem;
+  letter-spacing: 0;
+}
+
+.govuk-tag--blue {
+    background-color:#bbd4ea;
+}
