--- a/app/views/psd-cases-area/notifications/document-upload.html
+++ b/app/views/psd-cases-area/notifications/document-upload.html
@@ -4,7 +4,7 @@
   Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
-{% set title = "Add evidence" %}
+{% set title = "Add product identification and evidence details" %}
 
 {% block beforeContent %}
   {{ govukBackLink({
