--- a/app/views/psd-cases-area/notifications/product-safety.html
+++ b/app/views/psd-cases-area/notifications/product-safety.html
@@ -18,7 +18,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form govuk-!-margin-bottom-6" action="product-identification" method="post">
+      <form class="form govuk-!-margin-bottom-6" action="product-safety-impact" method="post">
 
        <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
