--- a/app/views/psd-revised-flow/add-new-product/edit-product-information-bl.html
+++ b/app/views/psd-revised-flow/add-new-product/edit-product-information-bl.html
@@ -21,7 +21,8 @@ Edit product information – {{ serviceName }} – GOV.UK Prototype Kit
  <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form class="form govuk-!-margin-bottom-6" action="edit-product-information-bl" method="post">
+    <form class="form" action="edit-product-information-bl" method="post">
+
       <span class="govuk-caption-l">{{title}}</span>
 
       <h1 class="govuk-heading-l govuk-!-margin-bottom-8">Edit product information</h1>
