--- a/app/views/psd-revised-flow/add-new-product/product-bl.html
+++ b/app/views/psd-revised-flow/add-new-product/product-bl.html
@@ -175,10 +175,13 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
           <a class="govuk-link" href="edit-product-information-bl">Add<span class="govuk-visually-hidden"> name</span></a>
         </dd>
     </dl>   
-
-
-  <button type="button" class="govuk-button">Create product record and add to notification</button>
   
+  <div class="button-container">
+    <button type="submit" class="govuk-button" data-module="govuk-button" name="happy-with-photo" id="happy-with-photo-1" value="yes">
+      Create product record and add to notification
+    </button>
+  </div>
 
 </form>
+
   {% endblock %}
