--- a/app/views/psd-revised-flow/add-new-product/product-psd.html
+++ b/app/views/psd-revised-flow/add-new-product/product-psd.html
@@ -188,7 +188,12 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
         </dd>
     </dl>   
 
-  <button type="button" class="govuk-button">Add to notification</button>
+  <div class="button-container">
+    <button type="submit" class="govuk-button" data-module="govuk-button" name="happy-with-photo" id="happy-with-photo-1" value="yes">
+      Add to notification
+    </button>
+  </div>
+
   
 </form>
 
