Remove asterisks from the notification task list

--- a/app/views/psd-cases-area/notifications/task-list.html
+++ b/app/views/psd-cases-area/notifications/task-list.html
@@ -67,7 +67,7 @@ Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
 
      <li>
       <h2 class="app-task-list__section">
-        <span class="app-task-list__section-number">1. </span>Choose the product for your notification <span style="font-weight: normal; font-size: 16px; color: #d4351c;">*</span>
+        <span class="app-task-list__section-number">1. </span>Choose the product for your notification
       </h2>
       <ul class="app-task-list__items">
         <li class="app-task-list__item">
@@ -83,7 +83,7 @@ Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
     {% else %}
 
        <h2 class="app-task-list__section">
-        <span class="app-task-list__section-number">1. </span>Choose the product for the notification <span style="font-weight: normal; font-size: 16px; color: #d4351c;">*</span>
+        <span class="app-task-list__section-number">1. </span>Choose the product for the notification
       </h2>
       </h2>
 
@@ -216,7 +216,7 @@ Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
 
     <li>
       <h2 class="app-task-list__section">
-        <span class="app-task-list__section-number">3. </span> Add businesses and their role in the supply chain <span style="font-weight: normal; font-size: 16px; color: #d4351c;">*</span>
+        <span class="app-task-list__section-number">3. </span> Add businesses and their role in the supply chain
       </h2>
 
 
@@ -238,7 +238,7 @@ Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
 
 <li>
       <h2 class="app-task-list__section">
-        <span class="app-task-list__section-number">3. </span> Add businesses and their role in the supply chain <span style="font-weight: normal; font-size: 16px; color: #d4351c;">*</span>
+        <span class="app-task-list__section-number">3. </span> Add businesses and their role in the supply chain
       </h2>
 
 
@@ -541,7 +541,7 @@ Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
 
 <li>
   <h2 class="app-task-list__section">
-    <span class="app-task-list__section-number">5. Add corrective actions <span style="font-weight: normal; font-size: 16px; color: #d4351c;">*</span>
+    <span class="app-task-list__section-number">5. Add corrective actions
   </h2>
   <ul class="app-task-list__items">
     <li class="app-task-list__item">
@@ -592,7 +592,7 @@ Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
 
 <li>
   <h2 class="app-task-list__section">
-    <span class="app-task-list__section-number">5. Add corrective actions <span style="font-weight: normal; font-size: 16px; color: #d4351c;">*</span>
+    <span class="app-task-list__section-number">5. Add corrective actions
   </h2>
   <ul class="app-task-list__items">
 
@@ -622,7 +622,7 @@ Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
 
 <li>
   <h2 class="app-task-list__section">
-    <span class="app-task-list__section-number">6. </span> Submit notification <span style="font-weight: normal; font-size: 16px; color: #d4351c;">*</span>
+    <span class="app-task-list__section-number">6. </span> Submit notification
   </h2>
   <ul class="app-task-list__items">
     <li class="app-task-list__item">
@@ -637,7 +637,7 @@ Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
 
     <li>
   <h2 class="app-task-list__section">
-    <span class="app-task-list__section-number">6. </span> Submit notification <span style="font-weight: normal; font-size: 16px; color: #d4351c;">*</span>
+    <span class="app-task-list__section-number">6. </span> Submit notification
   </h2>
   <ul class="app-task-list__items">
 
