--- a/app/views/psd-cases-area/notifications/task-list.html
+++ b/app/views/psd-cases-area/notifications/task-list.html
@@ -556,7 +556,7 @@ Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
     {% elseif checked("section-4a-complete", "yes") %}
     <li>
   <h2 class="app-task-list__section">
-    <span class="corrective-actions">5. Add corrective actions <span style="font-weight: normal; font-size: 16px; color: #d4351c;">*</span>
+    <span class="corrective-actions">5. Add corrective actions
   </h2>
   <ul class="app-task-list__items">
 
@@ -575,7 +575,7 @@ Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
 
 <li>
   <h2 class="app-task-list__section">
-    <span class="app-task-list__section-number">5. Add corrective actions <span style="font-weight: normal; font-size: 16px; color: #d4351c;">*</span>
+    <span class="app-task-list__section-number">5. Add corrective actions
   </h2>
   <ul class="app-task-list__items">
     <li class="app-task-list__item">
@@ -628,7 +628,7 @@ Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
     <li class="app-task-list__item">
       <span class="app-task-list__task-name">
         <a href="check-submit">Check the notification details and submit</a></span>
-       <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="medical-information-status">Not started</strong>
+       <strong class="govuk-tag govuk-tag--blue app-task-list__tag" id="medical-information-status">Not yet started</strong>
       </li>
       </ul>
     </li>
