--- a/app/views/psd-revised-flow/add-new-product/added-product-2.html
+++ b/app/views/psd-revised-flow/add-new-product/added-product-2.html
@@ -29,7 +29,7 @@
           <tbody>
             <tr>
               <td>
-                <img src="../../public/images/p+t-taken.png" alt="Image" class="table-image">
+                <img src="../../public/images/image-a.png" alt="Image" class="table-image">
               </td>
               <td class="table-content " colspan="2">
                 <h4 class="govuk-heading-s govuk-!-margin-bottom-1">Acer Aspire 3 </h4>
