--- a/app/views/psd-revised-flow/add-new-product/uploading-photo.html
+++ b/app/views/psd-revised-flow/add-new-product/uploading-photo.html
@@ -16,21 +16,23 @@ Add a product image – {{ serviceName }} – GOV.UK Prototype Kit
 {% block content %}
 
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+  <div class="govuk-grid-column-two-thirds">
 
-      <span class="govuk-caption-l">{{title}}</span>
-      <h1 class="govuk-heading-l govuk-!-margin-bottom-9">Add a product image</h1>
+    <span class="govuk-caption-l">{{title}}</span>
+    <h1 class="govuk-heading-l govuk-!-margin-bottom-9">Uploading image</h1>
 
-      <div class="how-to-photo-container">
-        <img src="../../public/images/loader.gif">
-        <h2 class="govuk-heading-m">Processing image</h2>
+    <div class="how-to-photo-container">
+      <img src="../../public/images/loader.gif">
+      <h2 class="govuk-heading-m">Processing</h2>
     </div>
 
+  </div>
+</div>
 
-    <script type="text/javascript">
-      setTimeout(function() {
-          window.location.href = 'happy-photo'; // Replace with your desired URL
-      }, 2000); // 2000 milliseconds = 2 seconds
-  </script>
+<script type="text/javascript">
+  setTimeout(function() {
+    window.location.href = 'happy-photo'; 
+  }, 3000); 
+</script>
 
   {% endblock %}
