--- a/app/views/psd-revised-flow/add-new-product/old/add-a-barcode-2.html
+++ b/app/views/psd-revised-flow/add-new-product/old/add-a-barcode-2.html
@@ -19,25 +19,25 @@
 
 
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
+  <div class="govuk-grid-column-two-thirds">
 
       <span class="govuk-caption-l">{{title}}</span>
 
-      <h1 class="govuk-heading-l govuk-!-margin-bottom-9">Search by barcode, serial number or ASIN</h1>
+      <h1 class="govuk-heading-l govuk-!-margin-bottom-9">Search using barcode, serial number or Amazon ASIN</h1>
 
       <div class="barcode-container govuk-!-margin-bottom-4">
         <div class="barcode-column">
-          <img src="../../public/images/barcode.png" alt="barcode" width="150" height="92">
-          <p class="govuk-body-s govuk-!-margin-top-1">Barcode numbers are 12-13 digits and are shown at the bottom of the barcode</p>
+          <img src="../../public/images/barcode.png" alt="barcode" width="180" height="115">
+          <p class="govuk-body-s govuk-!-margin-top-1">Use the 12-13 digits at the bottom of the barcode</p>
         </div>
         <div class="barcode-column">
-          <img src="../../public/images/asin.png" alt="asin" width="150" height="92">
-          <p class="govuk-body-s govuk-!-margin-top-1">The ASIN can be found in the 'Product details' section on Amazon pages</p>
+          <img src="../../public/images/asin.png" alt="asin" width="180" height="115">
+          <p class="govuk-body-s govuk-!-margin-top-1">The ASIN number can be found in the product details section on an Amazon page</p>
         </div>
       </div>
 
       <label class="govuk-label" for="case-search-term">
-        Barcode, serial number or ASIN
+        Barcode, serial number or Amazon ASIN
       </label>
       <div class="govuk-input__wrapper opss-search__wrapper ">
         <div class="autocomplete" style="position: relative; width: 100%;">
