--- a/app/views/psd-revised-flow/add-new-product/added-product.html
+++ b/app/views/psd-revised-flow/add-new-product/added-product.html
@@ -4,7 +4,7 @@
   Product added – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
-{% set title = "Choose the product for your notification" %}
+{% set title = "Add product" %}
 
 {% block beforeContent %}
   {{ govukBackLink({
@@ -35,7 +35,7 @@
                 <h4 class="govuk-heading-s govuk-!-margin-bottom-1">phil&teds sport™ </h4>
                 <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Category: </strong>Baby & Toddler</p>
                 <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Sub-category: </strong>Baby Transport Accessories</p>
-                <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>PSD ref: </strong>psd-436</p>
+                <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>PSD ref: </strong>psd-824</p>
               </td>
             </tr>
           </tbody>
