--- a/app/views/psd-revised-flow/add-new-product/product-bl.html
+++ b/app/views/psd-revised-flow/add-new-product/product-bl.html
@@ -4,7 +4,7 @@
 phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
-{% set title = "Choose the product for your notification" %}
+{% set title = "Add product" %}
 
 {% block beforeContent %}
   {{ govukBackLink({
