--- a/app/views/psd-revised-flow/add-new-product/product-manual.html
+++ b/app/views/psd-revised-flow/add-new-product/product-manual.html
@@ -18,16 +18,15 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form class="form" action="product-psd" method="post">
+    <form class="form" action="product-manual" method="post">
 
       <span class="govuk-caption-l">{{title}}</span>
 
-      <h1 class="govuk-heading-l govuk-!-margin-bottom-2">phil&teds sport™</h1>
-      <span class="govuk-caption-m govuk-!-margin-bottom-9">Found on the Product Safety Database</span>
+      <h1 class="govuk-heading-l govuk-!-margin-bottom-9">phil&teds sport™</h1>
 
 
       <div class="barcode-column govuk-!-margin-bottom-8">
-        <img src="../../public/images/p+t-stock.png" alt="barcode" width="217" height="217">
+        <img src="../../public/images/p+t-taken.png" alt="barcode" width="217" height="217">
         <p class="govuk-body">
           <a href="add-a-photo" class="govuk-link govuk-link--no-visited-state">Change</a>
         </p>      
@@ -47,7 +46,7 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
             <a class="govuk-link" href="edit-product-information-psd"><span class="govuk-visually-hidden"> name</span></a>
           </dd>
         </div>
- <div class="govuk-summary-list__row">
+<div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
             Brand name
           </dt>
