--- a/app/views/psd-revised-flow/add-new-product/search-products.html
+++ b/app/views/psd-revised-flow/add-new-product/search-products.html
@@ -11,7 +11,7 @@
 }) }}
 {% endblock %}
 
-{% set title = "Choose the product for your notification" %}
+{% set title = "Add product" %}
 
 {% block content %}
 
