--- a/app/views/psd-revised-flow/add-new-product/add-product-information.html
+++ b/app/views/psd-revised-flow/add-new-product/add-product-information.html
@@ -4,7 +4,7 @@
 Add product information – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
-{% set title = "Choose the product for your notification" %}
+{% set title = "Add product" %}
 
 {% block beforeContent %}
   {{ govukBackLink({
@@ -13,7 +13,7 @@ Add product information – {{ serviceName }} – GOV.UK Prototype Kit
 }) }}
 {% endblock %}
 
-{% set title = "Add businesses and their roles in the supply chain " %}
+{% set title = "Add product " %}
 
 {% block content %}
 
