--- a/app/views/psd-revised-flow/add-new-product/do-you-have-barcode.html
+++ b/app/views/psd-revised-flow/add-new-product/do-you-have-barcode.html
@@ -4,7 +4,7 @@
   Do you have a barcode? – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
-{% set title = "Choose the product for your notification" %}
+{% set title = "Add product" %}
 
 {% block beforeContent %}
   {{ govukBackLink({
