--- a/app/views/psd-revised-flow/add-new-product/edit-product-information-psd.html
+++ b/app/views/psd-revised-flow/add-new-product/edit-product-information-psd.html
@@ -4,7 +4,7 @@
 Edit product information – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
-{% set title = "Choose the product for your notification" %}
+{% set title = "Add product" %}
 
 {% block beforeContent %}
   {{ govukBackLink({
