--- a/app/views/psd-revised-flow/add-new-product/not-found.html
+++ b/app/views/psd-revised-flow/add-new-product/not-found.html
@@ -4,7 +4,7 @@
   Product not found – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
-{% set title = "Choose the product for your notification" %}
+{% set title = "Add product" %}
 
 {% block beforeContent %}
   {{ govukBackLink({
