--- a/app/views/psd-revised-flow/add-new-product/uploading-photo.html
+++ b/app/views/psd-revised-flow/add-new-product/uploading-photo.html
@@ -4,7 +4,7 @@
 Add a product image – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
-{% set title = "Choose the product for your notification" %}
+{% set title = "Add product" %}
 
 {% block beforeContent %}
   {{ govukBackLink({
