--- a/app/assets/sass/psd-menu.scss
+++ b/app/assets/sass/psd-menu.scss
@@ -950,19 +950,20 @@ ul#navigation.psd-header__navigation {
   border-spacing: 0;
   border-top: 1px solid #0b0c0c;
   border-bottom: 1px solid #0b0c0c;
-  table-layout: fixed; 
+  table-layout: fixed;
 }
+
 .custom-table-2 {
   width: 100%;
   border-collapse: separate;
   border-spacing: 0;
-  table-layout: fixed; 
+  table-layout: fixed;
 }
 
 .custom-table td {
   padding: 10px 0;
   vertical-align: top;
-  border-bottom: 1px solid #b1b4b6; 
+  border-bottom: 1px solid #b1b4b6;
 }
 
 .custom-table tr:last-child td {
@@ -972,7 +973,7 @@ ul#navigation.psd-header__navigation {
 .custom-table-2 td {
   padding: 10px 0;
   vertical-align: top;
-  border-bottom: 1px solid #b1b4b6; 
+  border-bottom: 1px solid #b1b4b6;
 }
 
 .custom-table-2 tr:last-child td {
@@ -997,12 +998,12 @@ ul#navigation.psd-header__navigation {
 
 .custom-table td:first-child {
   width: 110px; 
-  text-align: center; 
+  text-align: center;
 }
 
 .custom-table-2 td:first-child {
-  width: 110px; 
-  text-align: center; 
+  width: 110px;
+  text-align: center;
 }
 
 .custom-table td.table-content {
@@ -1019,7 +1020,7 @@ ul#navigation.psd-header__navigation {
 }
 
 .summary-content img {
-  margin-right: 5px; 
+  margin-right: 5px;
 }
 
 .autocomplete-items {
@@ -1037,10 +1038,10 @@ ul#navigation.psd-header__navigation {
   padding: 8px;
   padding-top: 8px;
   cursor: pointer;
-  background-color: #fff; 
-  border-left: 1px solid #b1b4b6; 
-  border-right: 1px solid #b1b4b6; 
-  border-bottom: 1px solid #b1b4b6; 
+  background-color: #ffffff;
+  border-left: 1px solid #b1b4b6;
+  border-right: 1px solid #b1b4b6;
+  border-bottom: 1px solid #b1b4b6;
   margin-left: 1px;
   width: 416px;
   font-size: 16px;
@@ -1049,19 +1050,18 @@ ul#navigation.psd-header__navigation {
 }
 
 .autocomplete-items div:hover {
-  background-color: #e9e9e9; 
+  background-color: #e9e9e9;
 }
 
 .autocomplete-active {
-  background-color: DodgerBlue !important; 
-  color: #ffffff; 
+  background-color: #1e90ff !important;
+  color: #ffffff;
 }
 
 .autocomplete-items div span {
   display: block;
   color: #505a5f;
   padding-top: 2px;
-  padding-bottom: 0px;
   font-size: 14px;
   font-family: "GDS Transport", arial, sans-serif;
 }
@@ -1076,11 +1076,11 @@ ul#navigation.psd-header__navigation {
 }
 
 body #autocompleteInput:focus {
-  border: 4px solid black;
+  border: 4px solid #0b0c0c;
   width: 423px;
   height: 30px;
   outline: none;
-  box-shadow: 0 0 0 3px #F9DE4B;
+  box-shadow: 0 0 0 3px #f9de4b;
   padding-left: 4px;
 }
 
@@ -1096,12 +1096,12 @@ body #autocompleteInput:focus {
   left: 0;
   right: 0;
   z-index: 99;
-  max-height: 240px; 
-  overflow-y: auto; 
-  width: 435px; 
+  max-height: 240px;
+  overflow-y: auto;
+  width: 435px;
 }
 
 #searchButton2 {
-  margin-left: -4px; 
+  margin-left: -4px;
 }
 
