--- a/app/assets/sass/psd-menu.scss
+++ b/app/assets/sass/psd-menu.scss
@@ -1053,11 +1053,6 @@ ul#navigation.psd-header__navigation {
   background-color: #e9e9e9;
 }
 
-.autocomplete-active {
-  background-color: #1e90ff !important;
-  color: #ffffff;
-}
-
 .autocomplete-items div span {
   display: block;
   color: #505a5f;
@@ -1066,7 +1061,7 @@ ul#navigation.psd-header__navigation {
   font-family: "GDS Transport", arial, sans-serif;
 }
 
-\#autocompleteinput {
+#autocompleteInput { /* eslint-disable-next-line */
   width: 425px;
   height: 34px;
   border: 2px solid #0b0c0c;
@@ -1075,7 +1070,6 @@ ul#navigation.psd-header__navigation {
   font-size: 19px;
 }
 
-/* eslint-disable-next-line */
 body #autocompleteInput:focus {
   border: 4px solid #0b0c0c; 
   width: 423px;
