--- a/app/views/psd-revised-flow/add-new-product/add-a-barcode.html
+++ b/app/views/psd-revised-flow/add-new-product/add-a-barcode.html
@@ -41,10 +41,10 @@
       </label>
       <div class="govuk-input__wrapper opss-search__wrapper ">
         <div class="autocomplete" style="position: relative; width: 100%;">
-          <input id="autocompleteInput" type="text" name="myCountry" placeholder="">
-          <div id="autocompleteSuggestions" class="autocomplete-items">
+          <input id="autocompleteInput" class="autocompleteInput" type="text" name="myCountry" placeholder="">
+          <div id="autocompleteSuggestions" class="autocompleteSuggestions autocomplete-items">
           </div>
-          <button class="govuk-button govuk-!-margin-bottom-0" id="searchButton2">
+          <button class="govuk-button govuk-!-margin-bottom-0 searchButton2" id="searchButton2">
             <span class="govuk-visually-hidden">Submit search</span>
           </button>
         </div>
